some more Atlas tweaks

--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -3,7 +3,7 @@
 (u)pali
 (e)🗺|mapping
 (*)A bunch of Atlas changes, expand the minor changes section at the bottom to see the incomplete list
-(+)Atlas stuff:<br>New clown hole<br>Fixed and added disposal pipes and disposals<br>Readded the genebooth<br>Fixed placement of the QM lightswitch<br>Added a bunch of intercoms<br>Added more cameras<br>Added more surgery tools (for robotics too)<br>Added equipment for the third miner<br>Added a glass recycler to chemistry<br>Fixed some incorrect areas (looking at you, armory in the freezer)<br>Added a portable air pump to toxins<br>Added a heat exchange pipe going through toxins burn chamber<br>Added reagent extractor to the kitchen<br>More artifacts both on and off station<br>Added artlab, engineering and mechanics cargopads<br>Added a recharger to QM<br>Added minimed and the cigarette vending machine (also a pizza vending machine, kinda)<br>Telesci reorganized a bit so the person in the chair doesn't block others<br>Added GPS landmarks<br>Added Gnome Chompski<br>Added blood fridge and restricted medicine locker<br>Various mood lighting experiments<br>Other minor changes I forgot about
+(+)Atlas stuff:<br>New clown hole<br>Fixed and added disposal pipes and disposals<br>Readded the genebooth<br>Fixed placement of the QM lightswitch<br>Added a bunch of intercoms<br>Added more cameras<br>Added more surgery tools (for robotics too)<br>Added equipment for the third miner<br>Added a glass recycler to chemistry<br>Fixed some incorrect areas (looking at you, armory in the freezer)<br>Added a portable air pump to toxins<br>Added a heat exchange pipe going through toxins burn chamber<br>Added reagent extractor to the kitchen<br>More artifacts both on and off station<br>Added artlab, engineering and mechanics cargopads<br>Added a recharger to QM<br>Added minimed and the cigarette vending machine (also a pizza vending machine, kinda)<br>Telesci reorganized a bit so the person in the chair doesn't block others<br>Added GPS landmarks<br>Added Gnome Chompski<br>Added blood fridge and restricted medicine locker<br>Various mood lighting experiments<br>Added some background objects to look at in space<br>Added the regular nano-fab to minig<br>Other minor changes I forgot about
 (u)Jawns
 (p)2114
 (e)🆕|feature
