--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -2,6 +2,7 @@
 (t)thu sep 10 20
 (u)pali
 (+)Crayons now even better. They show their selected letter and let you queue up a text of up to 100 characters!
+(+)Two more personal lockers and an experimental artifact flusher added to Atlas.
 (u)zjdtmkhzt
 (p)2136
 (e)|
