--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -3,7 +3,7 @@
 (u)ThePotato97
 (p)2143
 (e)|
-(*)Centcomm's power announcement is no longer hardcoded to the TEG and will work on any map.
+(+)Centcomm's power announcement is no longer hardcoded to the TEG and will work on any map.
 (u)pali
 (+)Crayons now even better. They show their selected letter and let you queue up a text of up to 100 characters!
 (+)Two more personal lockers and an experimental artifact flusher added to Atlas.
