--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,4 +1,7 @@
 
+(t)sun sep 13 20
+(u)warc
+(*)horizon fixes: you can sell small items thu the ejection chute now - also i guess i forgot to put a still in the bar?????????
 (t)sat sep 12 20
 (u)Medoublej
 (p)2153
