Changelog update for PDA stuff

--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,4 +1,8 @@
 
+(t)mon sep 14 20
+(u)Zamujasa
+(+)PDAs have an option to change the backlight color. You no longer have to use that wonky olive green color.
+(+)PDA window is now resizable and respects the "Popup Font Size" option in your preferences.
 (t)sun sep 13 20
 (u)kyle
 (+)Multitool pulse spark special attack now has a 3 second cooldown. Should make it slightly less oppressive for blobs and kudzu.
