--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -3,7 +3,7 @@
 (u)adharainspace
 (p)2201
 (e)🆕|feature
-(+)your playtime is now tracked (you cant see it yet tho sorry)
+(+)your playtime is now tracked (use the .stats command in our <a target="_blank" href="https://discord.com/invite/zd8t6pY">Discord server</a> to see your playtime)
 (t)mon sep 14 20
 (u)Zamujasa
 (+)PDAs have an option to change the backlight color. You no longer have to use that wonky olive green color.
