oof owie my bones

--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,4 +1,8 @@
 
+(t)fri oct 02 20
+(u)Tarmunora
+(e)|
+(+)changed food synth to dispense water instead of milk
 (t)thu oct 01 20
 (u)Spooktober
 (p)2314
