--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -4,6 +4,8 @@
 (p)2372
 (e)🆕🎨|feature, sprites
 (*)Green Radioactive Circle event gets a shy friend, Blue Radioactive circle, who has the more deadly NEUTRON RADIATION
+(u)kyle
+(*)Changed pregame lobby timer from 150 seconds to 180 seconds. It accidentally got moved down a while ago, putting it back up a bit.
 (t)sat oct 10 20
 (u)Flaborized
 (p)2368
