--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,10 +1,9 @@
 
 (t)tue oct 13 20
-(u)CodeDude
+(u)Arivias
 (p)2414
 (e)🆕|feature
-(*)Added soft soft pizza to the game - a tasty drink found in soda machines!
-(+)Made some small sprite changes to the base pizza sprite.
+(*)Added a 'pop' feature to the MechComp selection component.
 (t)mon oct 12 20
 (u)RSG250
 (p)2406
@@ -32,7 +31,7 @@
 (e)🆕|feature
 (*)"This object menaces with spikes of..." medal reintroduced. Try your hand at crafting the ultimate mining tool!
 (u)kyle
-(+)Kudzumen now have a chance 7%(per tick) to cure their heart attack if they get it if they are receiving the healing benefits of standing on kudzu with max nutrients. 
+(+)Kudzumen now have a chance 7%(per tick) to cure their heart attack if they get it if they are receiving the healing benefits of standing on kudzu with max nutrients.
 (t)thu oct 08 20
 (u)adharainspace
 (p)2363
