--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -4,6 +4,8 @@
 (p)2394
 (e)🎨|sprites
 (+)Tools and flamethrowers have had their sprites replaced with new and improved versions, new crowbar subtype
+(u)Tarmunora
+(*)Secretized Neutronium recipe. Experiment!
 (u)Gonzako
 (p)2346
 (e)|
