--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -7,7 +7,7 @@
 (e)🎨|sprites
 (+)Tools and flamethrowers have had their sprites replaced with new and improved versions, new crowbar subtype
 (u)Tarmunora
-(*)~~Secretized Neutronium recipe. Experiment!~~ disabled for a minute while I change somethings
+(*)Secretized Neutronium recipe. Experiment!
 (u)Gonzako
 (p)2346
 (e)|
