changelog for bugfix

--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,4 +1,12 @@
 
+(t)fri oct 30 20
+(u)ZeWaka
+(e)🐛|major bug
+(*)Hopefully fixed that bug that was causing tgui/chat windows to be blank and require a restart.
+(u)Mordent
+(p)25491
+(e)🆕|feature
+(+)Sound synthesizers have 1 second use delay.
 (t)thu oct 29 20
 (u)imnotjames
 (p)2531
