--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,5 +1,8 @@
 
 (t)wed nov 11 20
+(u)UrsulaMajor
+(e)🆕|feature
+(*)Roosters! They may not lay eggs, but they WILL peck your eyes out! :)
 (u)Carbadox
 (p)2651
 (e)⛔|removal
