--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,4 +1,8 @@
 
+(t)sun nov 15 20
+(u)UrsulaMajor
+(e)🆕|feature
+(*)New Chicken Breeds! See if you can find them all! (Not Secret! Feel free to share with your friends what you find out!)
 (t)sat nov 14 20
 (u)Chickenish
 (p)2659
