--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -6,7 +6,7 @@
 (+)VR chess now works again!
 (t)mon nov 16 20
 (u)Kyle
-(*)Fix Clock 188 bug where its shot delay while on burst mode was too low.
+(*)Fix Clock 188 bug where its shot delay while on burst mode was too low. Increase spread by 3 degrees too.
 (u)Luxizzle
 (p)2694
 (e)🆕🎨|feature, sprites
