bullets with blunt damage type don't deal bleed. This is kinda changing it back to how it used to be for the few blunt damage projectiles, like the 9mm NATO.

--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,5 +1,7 @@
 
 (t)tue nov 17 20
+(u)kyle
+(+)Blunt bullet projectile types don't deal bleed damage. Looking at you 9mm NATO.
 (u)pali
 (p)2710
 (e)🐛|bug
