--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -12,9 +12,9 @@
 (u)Superlagg
 (p)1833
 (e)⚖🆕🔄🎨|balance, feature, rework, sprites
-(*)Dismembered mutants now show that they are missing limbs.
-(*)Mutant limbs now show up properly when attached to someone else.
 (*)Tails can now be cut off and reattached to just about anyone.
+(+)Dismembered mutants now show that they are missing limbs.
+(+)Mutant limbs now show up properly when attached to someone else.
 (t)thu nov 26 20
 (u)pali
 (p)2738
@@ -105,7 +105,7 @@
 (+)Resprited some devices
 (u)Kyle, Enakai, & Virvatuli
 (e)🆕🎨|feature, sprites
-(*)Adds a new energy gun to the NTSO's kit, the Signifer II, and removes the clock ammo pouch. It can shoot both stun and lethal rounds, but is far weaker than the E-Gun. 
+(*)Adds a new energy gun to the NTSO's kit, the Signifer II, and removes the clock ammo pouch. It can shoot both stun and lethal rounds, but is far weaker than the E-Gun.
 (t)sat nov 21 20
 (u)Gannets
 (p)2772
