--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,5 +1,8 @@
 
 (t)sun dec 06 20
+(u)Flourish
+(e)🆕|feature
+(*)You can now send letters to Santa! Find their helper under the Spacemas tree.
 (u)BatElite
 (p)2932
 (e)🆕|feature
