fixed unescaped html tag in changelog

--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -3,7 +3,7 @@
 (u)ThePotato97
 (p)3010
 (e)📄|tgui
-(+)Added <u> to sanitization whitelist to allow for underlining text in paper
+(+)Added &lt;u&gt; to sanitization whitelist to allow for underlining text in paper
 (t)thu dec 10 20
 (u)Tarmunora
 (+)reverted fullauto nukie LMG
