--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,5 +1,7 @@
 
 (t)wed feb 07 24
+(u)LeahTheTech
+(+)Random characters will no longer receive broken looking partial hairstyles.
 (u)Saccha
 (p)17895
 (e)⚖📦|C-Balance, A-Game-Objects
