--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,4 +1,7 @@
 
+(t)sun feb 11 24
+(u)Sord
+(+)You can now order a communications dish manudrive (and commaster disk) from cargo.
 (t)fri feb 09 24
 (u)LeahTheTech
 (+)The chemical request console now shows the request in the PDA notification.
