--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,5 +1,7 @@
 
 (t)fri feb 16 24
+(u)LeahTheTech
+(+)Arcfiends can now *monsterscream too.
 (u)Cherman0
 (p)17853
 (e)🗺💅📦🎩|A-Mapping, C-QoL, A-Game-Objects, A-Clothing
