--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,4 +1,6 @@
-
+(t)mon feb 19 24
+(u)LeahTheTech
+(+)Shrapnel created by reactor meltdowns is now a bit more destructive.
 (t)fri feb 16 24
 (u)LeahTheTech
 (+)Arcfiends can now *monsterscream too.
