fix syndieborger range checks

--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,4 +1,5 @@
-
+(t)LeahTheTech
+(+)Syndicate docking stations now require the target to be adjacent to be click-dragged in.
 (t)sun may 05 24
 (u)colossusqw
 (p)18671
