--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,3 +1,4 @@
+(t)mon may 06 24
 (t)LeahTheTech
 (+)Syndicate docking stations now require the target to be adjacent to be click-dragged in.
 (t)sun may 05 24
