--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -8,7 +8,7 @@
 (p)18773
 (e)⚖💅🧛🔨|C-Balance, C-QoL, A-Gamemodes, A-Player-Actions
 (*)Revolution rounds now properly end immediately after buckle-cuffing the last revolutionary head in a brig cell.
-(t)LeahTheTech
+(u)LeahTheTech
 (+)Syndicate docking stations now require the target to be adjacent to be click-dragged in.
 (t)sun may 05 24
 (u)colossusqw
