afterlife bar no longer resets assigned_role to Staff Assistant
also updates the id cards patrons get to say "Observer" or
have their special role (if any)

--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,5 +1,7 @@
 
 (t)sat may 11 24
+(u)Zamujasa
+(+)Visitors to the Afterlife Bar should have more accurate ID cards.
 (u)Cheekybrdy
 (p)18732
 (e)🎨|C-Sprites
