--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -8,6 +8,9 @@
 (*)If chat fails to load, go to commands and try "fix chat". This hopefully shouldn't be an issue though.
 (*)Not all regex will work after import as there is a limitation of allowedRegex = /^[a-z0-9_\-$/^[\s\]\\]+$/gi;
 (+)Chat filtering options have been expanded, check PR page for details. Report any unsorted messages you think fit
+(u)Zamujasa
+(e)💅📦|C-QoL, A-Game-Objects
+(*)PDAs now sorta work like ATMs if you have your ID card inserted into them, allowing you to withdraw and deposit money on the go.
 (t)tue may 14 24
 (u)Zamujasa
 (e)💅📦|C-QoL, A-Game-Objects
