mail loot table adjustments

--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -13,6 +13,7 @@
 (*)PDAs now sorta work like ATMs if you have your ID card inserted into them, allowing you to withdraw and deposit money on the go.
 (*)Player-made vending machines now accept things from satchels properly.
 (*)Player-made vending machines will use the last price you entered as the default for new products, instead of it being 15 every time.
+(*)Adjusted mail drop tables a bit. You should get less garbage!
 (t)tue may 14 24
 (u)Zamujasa
 (e)💅📦|C-QoL, A-Game-Objects
