--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -5,6 +5,7 @@
 (e)💅📦|C-QoL, A-Game-Objects
 (+)Added attack sparks, sound effects, and hit twitches to bots, for projectile collisions
 (u)LeahTheTech
+(*)Mining subs on ocean maps will now start with ore scoops by default.
 (p)19009
 (e)🆕🎨⚖|C-Feature, C-Sprites, C-Balance
 (*)Added a "methane" canister, sometimes sold by Buford Tenin.
