--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -2,6 +2,7 @@
 (t)wed may 22 24
 (u)LeahTheTech
 (+)Pressing V will no longer hide your inventory. Why did it ever do that?
+(+)Reverted pressing V no longer hiding your inventory.
 (u)Glamurio (Ryou)
 (p)19089
 (e)💅|C-QoL
