--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,4 +1,7 @@
 
+(t)wed may 29 24
+(u)Sord
+(+)Blindfolds now no longer require you to aim for the head to equip it on another person. Now simply be on anything except harm intent and click them.
 (t)tue may 28 24
 (u)Glamurio (Ryou)
 (p)19126
