singulo buster rockets send people flying

--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,5 +1,7 @@
 
 (t)thu jun 06 24
+(u)LeahTheTech
+(+)Singularity buster rockets now send people flying.
 (u)JORJ949
 (p)18880
 (e)⚖⛔📦|C-Balance, C-Removal, A-Game-Objects
