--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -11,7 +11,7 @@
 (u)LeahTheTech
 (p)19339
 (e)🆕📦|C-Feature, A-Game-Objects
-(+)Eating sponge capsules and then drinking water will now cause them to expand into animals, causing a small amount of stomach damage in the process.
+(+)Eating sponge capsules and then drinking water will now cause them to expand into animals, causing stomach damage in the process. Syndicate sponge capsules are significantly more dangerous.
 (+)Sponge capsules can now be force-fed to other people.
 (u)FlameArrow57
 (p)19341
