--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -2,6 +2,7 @@
 (t)fri jun 07 24
 (u)LeahTheTech
 (+)The clown announcement computer is now a lot quieter and has been added to the maps it was missing from.
+(*)The bank computer now uses its own access type, only available by default to the HoP and Captain. No more mail couriers stealing the budget.
 (u)glowbold
 (p)19380
 (e)⚖💊|C-Balance, A-Medical
