mopping floors makes you slip again. wheeeeeeee

--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,5 +1,8 @@
 
 (t)fri jun 07 24
+(u)Zamujasa
+(e)🆕📦|C-Feature, A-Game-Objects
+(*)Mopping floors makes them slippery for bit again. Maybe don't run over them.
 (u)glowbold
 (p)19391
 (e)🆕|C-Feature
