move mail delivery obj from quartermaster to mail courier

--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -4,6 +4,8 @@
 (e)🆕📦|C-Feature, A-Game-Objects
 (*)Mopping floors makes them slippery for bit again. Maybe don't run over them.
 (*)People automatically catch mail, exactly like basketballs.
+(*)Quartermaster's mail delivery objective has been reassigned to the Mail Courier.
+(+)Mail rates tweaked.
 (+)Slipped a lamp manufacturer into the janitor's bag to make lamp replacing a little more convinient.
 (u)glowbold
 (p)19391
