--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,5 +1,8 @@
 
 (t)mon jun 10 24
+(e)🪲|C-Bug
+(u)Zamujasa
+(*)The Job EXP window now shows level progress properly.
 (u)LeahTheTech
 (*)Walking through fluid puddles will now expose your shoes to them. Acid WILL melt your Jordans.
 (u)TDHooligan, Blackrep
