--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,5 +1,7 @@
 
 (t)sun jun 23 24
+(u)tarmunora
+(+)Quartermasters are now forklift certified
 (u)Ilysen
 (p)19485
 (e)🆕📄📦|C-Feature, A-UI, A-Game-Objects
