brick size increase

--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,5 +1,7 @@
 
 (t)sat jul 06 24
+(u)LeahTheTech
+(+)Bricks have mysteriously increased in size.
 (u)Jan.antilles
 (p)19790
 (e)🎨🍝|C-Sprites, A-Catering
