--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -38,7 +38,7 @@
 (u)Studenterhue
 (p)19883
 (e)🎨📦|C-Sprites, A-Game-Objects
-(+)Added the winning movie posters from the June 2024 contest. Congratulations to JOELED, Showerless, Torchwick, Zhail, TemThrush, TheAmazingToast, Cindertroy, Nahuelwig, ATDoop, Rubicubie, and Garash!
+(+)Added the winning movie posters from the June 2024 contest. Congratulations to JOELED, Showerless, Torchwick, Zhail, TemThrush, TheAmazingToast, Cindertroy, Nahuelwg, ATDoop, Rubicubie, and Garash!
 (+)Crunchwrap, Lefinch, meaow589, L0llerbate, Lopdopgop, and kirdy2 didn't win the contest, but the admin team liked their entries so much that they were added anyway, though they appear at lower rates.
 (u)KakoLookiyam
 (p)19889
