do not feed bricks to washing machines

--- a/strings/changelog.txt
+++ b/strings/changelog.txt
@@ -1,4 +1,6 @@
-
+(t)fri jul 19 24
+(u)LeahTheTech
+(+)Do not feed bricks to washing machines.
 (t)thu jul 18 24
 (u)FancySchmancyNecromancy
 (p)20010
